# sr-bert

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: discrete_model_generate_scene.ipynb
src/: constants.py  create_datasets.py  create_test_subset.py  dataset_creation.py  datasets.py  exp_imp_test_split.py  extract_test_dataset.py  generate_scenes.py  generation_strategies.py  increase_word_embeddings.py  inference.py  inference_baseline.py  inference_cliparts_prediction.py  inference_linguistic.py  inference_multimodal.py  inference_scene_generation.py  modeling.py  naive_baselines.py  out_sample_test_split.py  pretrain.py  qa_inference.py  sc_inference.py  train.py  train_baseline.py  train_cliparts_prediction.py  train_continuous.py  train_continuous_baseline.py  train_discrete.py  train_discrete_baseline.py  train_linguistic.py  train_multimodal.py  train_text2visual.py  train_text2visual_continuous.py  train_text2visual_discrete.py  train_visual.py  utils.py
src/rnn_baseline/: datasets.py  modeling.py
src/scene_layouts/: datasets.py  evaluator.py  generation_strategies.py  modeling.py  utils.py
